# Digital-Student-Assistant

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yaml  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  uv-linters.sh
services/learnproj/: .env.example  manage.py  pyproject.toml
services/learnproj/api/: views.py
services/learnproj/client/: basic.py  delete.py  detail.py  not_found.py
services/learnproj/learnproj/: asgi.py  settings.py  wsgi.py
services/learnproj/learnproj/settings/: base.py
services/learnproj/products/migrations/: 0001_initial.py  0003_alter_product_user.py  0004_product_public.py
services/ml/: Dockerfile  pyproject.toml
services/ml/app/: main.py
services/ml/tests/: conftest.py  test_health.py
services/web/: .env.example  Dockerfile  manage.py  pyproject.toml
services/web/apps/api/: serializers.py  views.py
services/web/apps/applications/: models.py  tests_transitions.py  views.py
services/web/apps/applications/migrations/: 0002_application_review_comment_application_reviewed_at_and_more.py
services/web/apps/base/: mixins.py  permissions.py  serializers.py  urls.py  views.py
services/web/apps/base/tests/: conftest.py  tests.py
services/web/apps/outbox/: apps.py
services/web/apps/products/: serializers.py
services/web/apps/products/migrations/: 0002_product_user.py
services/web/apps/projects/: apps.py  forms.py  index.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py  viewsets.py
services/web/apps/projects/migrations/: 0001_initial.py  0002_product_user.py  0002_project_user.py  0003_alter_product_user.py  0003_alter_project_user.py  0004_product_public.py  0004_project_public.py
services/web/apps/search/: views.py
services/web/client/: create.py  delete.py  list.py  update.py
services/web/config/: api_root_urls.py  api_v1_urls.py  api_views.py  asgi.py  routers.py  urls.py  wsgi.py
services/web/config/settings/: base.py  dev.py  prod.py
services/web/templates/: home.html
src/graph/: .env.example  Dockerfile  README.md  pyproject.toml
src/graph/app/: graph_store.py  main.py  metrics.py  models.py  outbox_client.py  projector.py  settings.py
src/graph/tests/: conftest.py  test_projector.py
src/graph/tests/integration/: test_projector.py  test_read_api.py
src/ml/: .env.example  README.md  pyproject.toml
src/ml/app/: index_store.py  main.py  metrics.py  models.py  outbox_client.py  projector.py  settings.py
src/ml/tests/: conftest.py
src/ml/tests/api/: test_health.py
src/ml/tests/integration/: test_outbox_sync.py
src/web/: .env.example  Dockerfile  README.md  pyproject.toml
src/web/apps/: conftest.py
src/web/apps/account/: models.py  models.pyi  permissions.py  serializers.py  tests.py  urls.py  views.py
src/web/apps/account/migrations/: 0001_initial.py
src/web/apps/api/: urls.py
src/web/apps/applications/: admin.py  models.pyi  serializers.py  tests_transitions.py  transitions.py  urls.py  views.py
src/web/apps/applications/migrations/: 0001_initial.py
src/web/apps/base/: admin_unfold.py  auth_providers.py  auth_views.py  authentication.py  logging.py  metrics.py  mixins.py  serializers.py  urls.py  views.py
src/web/apps/base/migrations/: 0001_initial.py
src/web/apps/base/tests/: tests.py
src/web/apps/faculty/: admin.py  apps.py  client.py  models.py  normalization.py  serializers.py  services.py  urls.py  views.py
src/web/apps/faculty/migrations/: 0001_initial.py
src/web/apps/frontend/: decorators.py  urls.py
src/web/apps/frontend/templatetags/: frontend_extras.py
src/web/apps/frontend/tests/: conftest.py  test_email_verification_flow.py  test_frontend_integration_guards.py  test_frontend_views.py  test_unit_functions.py
src/web/apps/frontend/views/: __init__.py  applications.py  auth.py  moderation.py  profile.py  projects.py
src/web/apps/imports/: admin.py  models.py  models.pyi  serializers.py  services.py  tests.py  views.py
src/web/apps/imports/migrations/: 0001_initial.py
src/web/apps/outbox/: apps.py  models.py  models.pyi  serializers.py  services.py  views.py
src/web/apps/outbox/migrations/: 0001_initial.py  0002_outboxconsumercheckpoint.py
src/web/apps/projects/: admin.py  forms.py  importers.py  index.py  initiative_models.py  initiative_models.pyi  initiative_serializers.py  initiative_transitions.py  initiative_views.py  models.py  models.pyi  normalization.py  pagination.py  serializers.py  tests.py  tests_admin.py  tests_import.py  tests_transitions.py  transitions.py  utils.py  views.py  viewsets.py
src/web/apps/projects/migrations/: 0005_alter_project_options_remove_project_content_and_more.py  0006_project_accepted_participants_count_and_more.py  0007_bookmark.py  0007_epp_project_activity_type_and_more.py  0008_add_supervisor_name.py  0008_project_application_deadline_and_more.py  0009_project_projects_status_updated_idx_and_more.py  0009_remove_bookmark.py  0010_add_epp_display_fields.py  0010_project_projects_app_opened_idx_and_more.py  0011_initiativeproposal_initiativeproposalsubmission_and_more.py  0012_normalize_technology_tags.py  0013_technology_directory.py
src/web/apps/projects/tests/: helpers.py
src/web/apps/recs/: apps.py  serializers.py  services.py  tests.py  views.py
src/web/apps/search/: views.py
src/web/apps/users/: admin.py  email_verification.py  models.py  models.pyi  serializers.py  tests.py  urls.py  utils.py  views.py
src/web/client/: detail.py  not_found.py
src/web/config/: api_root_urls.py  api_v1_urls.py  api_views.py  schema.py  urls.py  wsgi.py
src/web/config/settings/: base.py  dev.py  prod.py
src/web/templates/: 403.html  404.html  500.html  base.html
src/web/templates/frontend/: application_list.html  auth.html  edit_application.html  initiative_form.html  moderation_list.html  my_projects.html  profile.html  project_applications.html  project_detail.html  project_form.html  project_list.html  recommendations.html  verify_email.html
src/web/tests/: README.md
(+153 files in other folders)
