[tool.ruff]
line-length = 100
lint.select = ["E","F","W","I"]
target-version = "py313"
exclude = ["venv",".venv","build","dist"]

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ['py313']

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*import python_multipart.*:PendingDeprecationWarning",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-student-assistant"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
backend = [
    "django>=5.2.9",
    "djangorestframework>=3.16.1",
    "django-cors-headers==4.9.0",
    "django-health-check>=4.0.6",
    "psycopg2-binary==2.9.11",
    "algoliasearch-django>=4.0.0",
    "algoliasearch>=4.35.4",
    "python-dotenv>=1.2.1",
    "requests==2.32.5",
    "bcrypt==5.0.0",
    "passlib",
    "python-jose",
]

ml = [
    "fastapi==0.127.1",
    "uvicorn==0.38.0",
    "python-multipart",
    "pydantic",
    "sqlalchemy",
    "sqlmodel~=0.0.30",
    "starlette==0.49.1",
]

dev = [
    "black==25.12.0",
    "httpx==0.27.2",
    "isort==5.13.2",
    "pre-commit==4.5.0",
    "pytest==9.0.2",
    "pytest-cov>=5.0.0",
    "ruff==0.14.9",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["services*"]
exclude = ["tests*", "docs*", "reports*", "EVIDENCE*", "security*", "htmlcov*"]
