[tool.ruff]
line-length = 100
lint.select = ["E","F","W","I"]
target-version = "py313"
exclude = ["venv",".venv","build","dist"]

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ['py313']

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*import python_multipart.*:PendingDeprecationWarning",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-student-assistant"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "black==25.12.0",
    "httpx==0.27.2",
    "isort==5.13.2",
    "pre-commit==4.5.0",
    "pytest==9.0.2",
    "pytest-cov>=5.0.0",
    "ruff==0.14.9",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["services*"]
exclude = ["tests*", "docs*", "reports*", "EVIDENCE*", "security*", "htmlcov*"]

[tool.uv.workspace]
members = [
    "services/learnproj",
    "services/ml",
]
