[tool.ruff]
line-length = 100
lint.select = ["E","F","W","I"]
target-version = "py313"
exclude = ["venv",".venv","build","dist"]

[tool.ruff.lint.per-file-ignores]
"src/web/apps/*/migrations/*.py" = ["E501"]

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ['py313']

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
filterwarnings = [
    "ignore:.*import python_multipart.*:PendingDeprecationWarning",
]
testpaths = ["src", "tests"]
norecursedirs = [".venv", ".pytest_cache", ".ruff_cache", ".tmp", "build", "dist"]
markers = [
    "e2e: end-to-end acceptance scenarios",
    "integration: cross-service integration scenarios",
    "release_gate(gate_id): links a test to a release gate identifier",
    "bpmn(*element_ids): links a test to BPMN element identifiers",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-student-assistant"
version = "0.1.0"
authors = [
    { name = "Sergei"}
]
description = "..."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.uv.workspace]
members = ["src/web", "src/ml", "src/graph"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit==4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff==0.15.11",
    "ty>=0.0.31",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["src*"]
exclude = ["tests*", "docs*", "reports*", "EVIDENCE*", "security*", "htmlcov*", "*.egg-info*", "__pycache__*"]
