[project]
name = "learnproj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
backend = [
    "django>=5.2.9",
    "djangorestframework>=3.16.1",
    "django-cors-headers==4.9.0",
    "django-health-check>=4.0.6",
    "psycopg2-binary==2.9.11",
    "algoliasearch-django>=4.0.0",
    "algoliasearch>=4.35.4",
    "python-dotenv>=1.2.1",
    "requests==2.32.5",
    "bcrypt==5.0.0",
    "passlib",
    "python-jose",
]
