[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.127.1",
    "uvicorn==0.38.0",
    "python-multipart",
    "pydantic",
    "sqlalchemy",
    "sqlmodel~=0.0.30",
    "starlette==0.49.1",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
