[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.127.1",
    "uvicorn==0.38.0",
    "python-multipart",
    "pydantic",
    "sqlalchemy",
    "sqlmodel~=0.0.30",
    "starlette==0.49.1",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "reports*", "build*", "dist*", "*.egg-info*", "__pycache__*"]
