[project]
name = "web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.4",
    "djangorestframework>=3.16.1",
    "django-cors-headers==4.9.0",
    "django-health-check>=4.0.6",
    "psycopg2-binary==2.9.11",
    "python-dotenv>=1.2.1",
    "requests==2.33.0",
    "bcrypt==5.0.0",
    "passlib",
    "python-jose",
    "gunicorn>=23.0.0",
    "drf-spectacular>=0.29.0",
    "dotenv>=0.9.9",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.2.0",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "tests_*.py"]
testpaths = ["apps", "tests"]
norecursedirs = [".venv", ".pytest_cache", ".ruff_cache", "dist", "build"]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "config*"]
exclude = ["tests*", "client*", "templates*", "reports*", "build*", "dist*", "*.egg-info*", "__pycache__*"]
